--- a/yesssman/Info.plist
+++ b/yesssman/Info.plist
@@ -17,7 +17,9 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIApplicationSceneManifest</key>
@@ -38,7 +40,7 @@
 		</dict>
 	</dict>
 	<key>UIApplicationShortcutWidget</key>
-	<string>at.scale.yesssman-today</string>
+	<string>at.scale.yesssman.today</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
